--- a/templates/base.html
+++ b/templates/base.html
@@ -367,6 +367,7 @@
             display: none;
         }
     </style>
+    <meta name="csrf-token" content="{{ csrf_token() }}">
 </head>
 <body>
     <div class="app-wrapper">
